2012-09-01  Allan McRae  <allan@archlinux.org>

        [BZ #13412]
        * configure.in (AWK): Require gawk version 3.0 or later.
        * configure: Regenerated.

2012-09-01  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/kernel-features.h
	(__ASSUME_POSIX_CPU_TIMERS): Remove.
	* sysdeps/unix/sysv/linux/clock_getcpuclockid.c
	[__NR_clock_getres]: Make code unconditional.
	[!__ASSUME_POSIX_CPU_TIMERS]: Remoce conditional code.
	(clock_getcpuclockid): Remove code left unreachable by removal of
	conditionals.
	* sysdeps/unix/sysv/linux/clock_getres.c [__NR_clock_getres]: Make
	code unconditional.
	[__ASSUME_POSIX_CPU_TIMERS]: Likewise.
	[!__ASSUME_POSIX_CPU_TIMERS]: Remove conditional code.
	* sysdeps/unix/sysv/linux/clock_gettime.c [__NR_clock_gettime]:
	Make code unconditional.
	[__ASSUME_POSIX_CPU_TIMERS]: Likewise.
	[!__ASSUME_POSIX_CPU_TIMERS]: Remove conditional code.
	* sysdeps/unix/sysv/linux/clock_settime.c
	[__ASSUME_POSIX_CPU_TIMERS <= 0 && __NR_clock_settime]: Remove
	conditional code.
	[__ASSUME_POSIX_CPU_TIMERS]: Make code unconditional.
	[!__ASSUME_POSIX_CPU_TIMERS]: Remove conditional code.

2012-08-29  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14476]
	* Makefile (install): Also pass LD_SO=$(ld.so-version) to
	scripts/test-installation.pl.

	* scripts/test-installation.pl: Use LD_SO to get $ld_so_name
	and $ld_so_version if it is set.

2012-08-29  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #14516]
	* sysdeps/unix/sysv/linux/ttyname.c (ttyname): Don't return
	failure if reading from procfs failed.
	* sysdeps/unix/sysv/linux/ttyname_r.c (ttyname_r): Likewise.

2012-08-27  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/kernel-features.h
	(__ASSUME_STAT64_SYSCALL): Remove all definitions.
	* sysdeps/unix/sysv/linux/fxstat64.c [!__ASSUME_STAT64_SYSCALL]:
	Remove conditional code.
	[__ASSUME_STAT64_SYSCALL]: Make code unconditional.
	* sysdeps/unix/sysv/linux/fxstatat64.c [!__ASSUME_STAT64_SYSCALL]: